# bootstrap/app.php
@@ -11,10 +11,15 @@ return Application::configure(basePath: dirname(__DIR__))
         commands: __DIR__.'/../routes/console.php',
         health: '/up',
     )
-    ->withMiddleware(function (Middleware $middleware): void {
-        $middleware->api(prepend: [
-            \Laravel\Sanctum\Http\Middleware\EnsureFrontendRequestsAreStateful::class,
-        ]);
+    ->withMiddleware(function (Middleware $middleware) {
+        // $middleware->api(prepend: [
+        //     \Laravel\Sanctum\Http\Middleware\EnsureFrontendRequestsAreStateful::class,
+        // ]);
+
+        $middleware->validateCsrfTokens(except: [
+            'api/login',
+            'api/logout',
+            ]);
     })
     ->withExceptions(function (Exceptions $exceptions): void {
         //
