# routes/api.php
@@ -4,11 +4,9 @@ use App\Http\Controllers\AuthController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('/register', [AuthController::class,'register']);
-Route::post('/login', [AuthController::class,'login']);
+Route::post('/login', [AuthController::class,'login'])->name('login');
 
 Route::middleware('auth:sanctum')->group(function () {
-
     Route::post('/logout', [AuthController::class,'logout']);
     Route::get('/user', [AuthController::class,'profile']);
-
 });
